# daedalus

./: CMakeLists.txt  Options.cmake  prepare.sh
.github/workflows/: compilation copy.yml  compilation.yml
Source/: CMakeLists.txt
Source/Base/: Macros.h
Source/Config/: ConfigOptions.h
Source/Core/: CMakeLists.txt  CPU.cpp  CPU.h  CPUState.h  DMA.cpp  Dynamo.cpp  FlashMem.cpp  Interpret.cpp  Interrupt.cpp  Interrupt.h  Memory.cpp  Memory.h  Memory_Read.inl  Memory_ReadInternal.inl  Memory_WriteValue.inl  PIF.cpp  PIF.h  R4300.cpp  R4300OpCode.h  ROM.cpp  ROM.h  RSP_HLE.cpp  RomSettings.cpp  Save.cpp  TLB.cpp
Source/Debug/: DBGConsole.h  DebugLog.cpp  Dump.cpp  Dump.h  PrintOpCode.cpp  Synchroniser.cpp
Source/DynaRec/: CodeBufferManager.h  Dynamo.cpp  Fragment.cpp  Fragment.h  FragmentCache.cpp  FragmentCache.h  RegisterSpan.h  StaticAnalysis.cpp  TraceRecorder.cpp  TraceRecorder.h
Source/DynaRec/ARM/: AssemblyUtilsARM.cpp  CodeBufferManagerARM.cpp  CodeGeneratorARM.cpp  DynarecStubARM.S
Source/DynaRec/dummy/: AssemblyUtilsDummy.cpp  CodeBufferManagerDummy.cpp
Source/DynaRec/mips/: CodeBufferManagerPSP.cpp  CodeGeneratorPSP.cpp  DynaRecStubs.S
Source/DynaRec/x64/: AssemblyWriterX64.cpp  AssemblyWriterX64.h  CodeBufferManagerX64.cpp  CodeGeneratorX64.cpp
Source/DynaRec/x86/: CodeBufferManagerX86.cpp  CodeGeneratorX86.cpp
Source/Graphics/: CMakeLists.txt  GraphicsContext.h  NativeTexture.h
Source/HLEAudio/: ABI3.cpp  ABI3mp3.cpp  ABI_ADPCM.cpp  ABI_Buffers.cpp  ABI_Filters.cpp  ABI_MixerInterleave.cpp  ABI_Resample.cpp  AudioBuffer.cpp  AudioPlugin.h  CMakeLists.txt  ENV_Mixer.cpp  HLEAudioInternal.h  HLEAudioState.cpp  HLEMain.cpp
Source/HLEAudio/Platform/: CMakeLists.txt
Source/HLEAudio/Platform/CTR/: AudioOutput.cpp
Source/HLEAudio/Platform/PSP/: AudioPluginPSP.cpp  AudioPluginPSP_SDL.cpp  CMakeLists.txt
Source/HLEAudio/Platform/PSP/old/: AudioOutput.cpp
Source/HLEAudio/Platform/SDL/: AudioPluginSDL.cpp  CMakeLists.txt
Source/HLEAudio/Platform/Windows/: CMakeLists.txt
Source/HLEAudio/Platform/macOS/: AudioPluginmacOS.cpp  CMakeLists.txt
Source/HLEAudio/Plugin/: AudioPlugin.cpp  AudioPlugin.h  AudioPluginNone.cpp  CMakeLists.txt
Source/HLEAudio/Plugin/CTR/: AudioOutput.cpp  AudioOutput.h  AudioPluginCTR.cpp  AudioPluginCTR.h
Source/HLEAudio/Plugin/PSP/: AudioPluginPSP.cpp  AudioPluginPSP.h
Source/HLEAudio/Plugin/SDL/: AudioPluginSDL.cpp  AudioPluginSDL.h  RingBuffer.h
Source/HLEGraphics/: BaseRenderer.cpp  BaseRenderer.h  CMakeLists.txt  CachedTexture.cpp  ConvertFormats.h  DLDebug.cpp  DLParser.cpp  GraphicsPlugin.h  Microcode.cpp  RDPStateManager.cpp  TMEM.cpp  TextureCache.cpp  TextureCache.h  TextureInfo.cpp
Source/HLEGraphics/Combiner/: BlendConstant.h  CombinerExpression.cpp  (+6 more)
Source/Input/: CMakeLists.txt  InputManager.h
Source/Interface/: CMakeLists.txt  Cheats.cpp  ConfigOptions.h  IniFile.cpp  IniFile.h  Preferences.cpp  Preferences.h  RomDB.cpp  RomDB.h  RomID.h  RomPreferences.h  SaveState.cpp  SaveState.h
Source/OSHLE/: OS.cpp  OSMesgQueue.h  patch.cpp  patch_ai_hle.inl  patch_eeprom_hle.inl  patch_math_hle.inl  patch_mesg_hle.inl  patch_regs_hle.inl  patch_thread_hle.inl  patch_timer_hle.inl
Source/RomFile/: CMakeLists.txt  ROMBuffer.cpp  ROMBuffer.h  RomFile.cpp  RomFile.h  RomFileBuffer.cpp  RomFileCache.cpp  RomFileCache.h  RomFileCompressed.cpp  RomFileMemory.cpp  RomFileMemory.h  RomFileSettings.cpp  RomFileSettings.h  RomFileUncompressed.cpp  RomSettings.cpp  RomSettings.h
Source/SysCTR/: main.cpp
Source/SysGL/: GL.h
Source/SysPSP/: main.cpp
Source/SysPSP/HLEAudio/: AudioPluginPSP.cpp  AudioPluginPSP_SDL.cpp  CMakeLists.txt
Source/SysPSP/HLEAudio/old/: AudioOutput.cpp  AudioPluginPSP.cpp  AudioPluginPSP.h
Source/SysPSP/PRX/MediaEngine/: CMakeLists.txt  Makefile
Source/SysPosix/: main.cpp
Source/SysW32/: CMakeLists.txt
Source/System/: DataSink.h  Endian.h  IO.h  SystemInit.cpp  SystemInit.h
Source/UI/: AboutComponent.cpp  AboutComponent.h  AdjustDeadzoneScreen.cpp  AdjustDeadzoneScreen.h  AdvancedOptionsScreen.cpp  AdvancedOptionsScreen.h  CheatOptionsScreen.cpp  CheatOptionsScreen.h  Dialogs.cpp  Dialogs.h  DrawText.h  GlobalSettingsComponent.cpp  GlobalSettingsComponent.h  MainMenuScreen.cpp  MainMenuScreen.h  Menu.h  PauseOptionsComponent.cpp  PauseOptionsComponent.h  PauseScreen.cpp  PauseScreen.h  RomPreferencesScreen.cpp  RomPreferencesScreen.h  RomSelectorComponent.cpp  RomSelectorComponent.h  SavestateSelectorComponent.cpp  SavestateSelectorComponent.h  SelectedRomComponent.cpp  SelectedRomComponent.h  SplashScreen.cpp  SplashScreen.h  UICommand.cpp  UICommand.h  UIComponent.cpp  UIComponent.h  UIContext.h  UIElement.cpp  UIElement.h  UIScreen.cpp  UIScreen.h  UISetting.cpp  (+2 more)
Source/Utility/: BatchTest.cpp  BatchTest.h  CMakeLists.txt  FastMemcpy.cpp  FramerateLimiter.cpp  MemoryHeap.cpp  MemoryHeap.h  Paths.cpp  Paths.h  Profiler.cpp  Profiler.h  Stream.cpp  Translate.cpp  Translate.h  VolatileMem.h
(+96 files in other folders)
