if(DAEDALUS_PSP)

    if(DAEDALUS_SDL)
        add_library(AudioPlugin OBJECT ${PROJECT_SOURCE_DIR}/Source/HLEAudio/SDL/AudioPluginSDL.cpp)
    elseif(AUDIOOUTPUT)
        add_library(AudioPlugin OBJECT PSP/old/AudioOutput.cpp PSP/old/AudioPluginPSP.cpp)
    else()
        add_library(AudioPlugin OBJECT PSP/AudioPluginPSP.cpp)
    endif()
elseif(DAEDALUS_W32)
    add_library(AudioPlugin OBJECT Windows/AudioPluginW32.cpp )
elseif(DAEDALUS_CTR)
    add_library(AudioPlugin OBJECT CTR/AudioOutput.cpp CTR/AudioPluginCTR.cpp)
elseif(APPLE)
    add_library(AudioPlugin OBJECT macOS/AudioPluginmacOS.cpp )
else()
    add_subdirectory(SDL)
endif()

list(APPEND daed_libs "AudioPlugin")
set(daed_libs ${daed_libs} PARENT_SCOPE)
