if(PSP)
add_library(Audio_Plugin OBJECT PSP/AudioPluginPSP.cpp )
elseif(DAEDALUS_CTR)
add_library(Audio_Plugin OBJECT CTR/AudioPluginCTR.cpp)
else()
add_library(Audio_Plugin OBJECT SDL/AudioPluginSDL.cpp)
endif()

if(DAEDALUS_PROFILE_AUDIOPLUGIN)
target_compile_options(Audio_Plugin PRIVATE -pg)
endif(DAEDALUS_PROFILE_AUDIOPLUGIN)

list(APPEND daed_libs "Audio_Plugin")
set(daed_libs ${daed_libs} PARENT_SCOPE)